--- a/jenkins.yml
+++ b/jenkins.yml
@@ -5,7 +5,7 @@ identidock80:
     ports:
         - "5000:5000"
     environment:
-        - ENV: prod
+        - ENV=prod
     volumes:
         - ./app:/app
     links:
